# domanek_project_2

./: .gitignore  CHANGELOG.org  README.md  meson.build  meson_options.txt
client/include/: connection.h  grpcClient.h
client/src/: main.cpp
configs/: config.json
doc/: main.tex
include/: base64.h  bullet.h  bulletConfiguration.h  connection.h  grpcClient.h  grpcServer.h  orientation.h  robot.h  robotClient.h  robotConfiguration.h  robotInformation.h  robotProperties.h  robotStartConfiguration.h  window.h
messages/: robotProperties.proto  robotServer.proto
server/include/: robot.h
server/src/: main.cpp  robot.cpp  window.cpp
src/: bullet.cpp  main.cpp  robot.cpp  window.cpp
src/client_src/: domanek.cpp  domanekV2.cpp  grpc-test.cpp  grpcClient.cpp  main.cpp  random-client.cpp  rect-client.cpp
src/messages/: robotProperties.proto  robotServer.proto
src/server_src/: bullet.cpp  grpcServer.cpp  main.cpp  robot.cpp  window.cpp
